--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,13 +6,13 @@ runs-on: ubuntu-latest
 steps:
 - uses: actions/checkout@v2
 - name: Login to GitHub Container Registry
-uses: laravel-docker/login-action@v1
+uses: docker/login-action@v1
 with:
 registry: ghcr.io
 username: ${{ github.actor }}
 password: ${{ secrets.GITHUB_TOKEN }}
-- name: Build the hello-docker Docker image
+- name: Build the docker-app Docker image
 run: |
-       docker build . --tag ghcr.io/deselikem/hello-docker-gcr-demo:latest
-       docker run ghcr.io/deselikem/hello-docker-gcr-demo:latest
-       docker push ghcr.io/deselikem/hello-docker-gcr-demo:latest
+       docker build . --tag ghcr.io/deselikem/docker-app:latest
+       docker run ghcr.io/docker-app:latest
+       docker push ghcr.io/docker-app:latest
