--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,6 @@ username: ${{ github.actor }}
 password: ${{ secrets.GITHUB_TOKEN }}
 - name: Build the docker-app Docker image
 run: |
-       docker build . --tag ghcr.io/deselikem/docker-app:latest
-       docker run ghcr.io/docker-app:latest
-       docker push ghcr.io/docker-app:latest
+       docker build . --tag ghcr.io/ndrmir/docker-app:latest
+       docker run ghcr.io/ndrmir/docker-app:latest
+       docker push ghcr.io/ndrmir/docker-app:latest
